--- a/src/app/signup/signup.component.css
+++ b/src/app/signup/signup.component.css
@@ -158,6 +158,55 @@
   height: auto;
 }
 
+
+/* DivTable.com */
+.divTable2{
+  display: table;
+  width: 120%;
+  margin: auto;
+}
+.divTableRow2 {
+	display: table-row;
+}
+.divTableHeading2 {
+	background-color: #EEE;
+	display: table-header-group;
+}
+.divTableCell2, .divTableHead2 {
+	display: table-cell;
+	padding: 10px 18px;
+    font-size: 1.5rem;
+}
+.divTableCell2 h2 {
+    text-align: left;
+    margin: 0;
+    margin-top: -74px;
+    position: absolute;
+}
+.divTableHeading2 {
+	background-color: #EEE;
+	display: table-header-group;
+	font-weight: bold;
+}
+.divTableFoot2 {
+	background-color: #EEE;
+	display: table-footer-group;
+	font-weight: bold;
+}
+.divTableBody2 {
+	display: table-row-group;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+.divTable2 .img-artist {
+  width: 250rem;
+  height: auto;
+}
+
+
+
+
+
 .img-element{
   width: 50rem;
   height: auto;
