--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -153,12 +153,6 @@
 
 
 
-
-
-
-
-
-
   <!-- Portfolio -->
   <section id="banner" class=" style2" style="margin-top: 60px">
 			<article class="container container-gallerie">
@@ -220,47 +214,82 @@
       <header>
           <h3>Artists</h3>
       </header>
-
-
 		  <section>
 
-			    <h2 style="text-align: left">Dani Posada</h2>
-				<p style="text-align: left"> As one of the founders of Klang Heimlich, Dani Posada is taking care of the bookings,
-                     logistics, decoration and artwork. Moreover, he is one of the three residents at Klang Heimlich and co-founder
-                      of other labels in Switzerland. Despite his young DJ career, Dani has already achieved to play in
-                      different cities around the world and is a well-known DJ to the Zurich nightlife scene. His sets
-                      as well as current productions are defined by groovy sounds that can go from downtempo over
-                      deep- and tech-house to techno, telling a story that is slowly building up and gaining in
-                      intensity until it reaches the climax.
-                      <p>(Link: <a href="https://www.facebook.com/DaniPosadaMusic/" target="_blank"> <b> Dani Posada</b> </a>)</p>
-				<hr/>
-                <h2 style="text-align: left">Marc Bach</h2>
-				<p style="text-align: left">a.k.a. Papa Bach began his DJ career back in 1994. Since then he became an institution
-                    in the Swiss nightlife, not only as a DJ and promoter of different labels, but also as producer and owner of
-                    two different clubs in Zurich, Pfingstweide and Cafe Gold. His background as well as his close friendship to
-                     the three founders of Klang Heimlich led him to join the Family in 2017. Since then, Marc is in charge of
-                     finance, staff management and logistics. He is also one of the Klang Heimlich residents, playing together
-                     with his partner Patrick Juen, under the name Juen & Bach. This duo is well known within and beyond
-                     the Swiss borders for their great music.
-                      <p>(Link: <a href="https://www.facebook.com/JuenBach/" target="_blank"><b> Marc Bach</b> </a>)</p>
-                <hr/>
-				<h2 style="text-align: left">Phil Lutz</h2>
-				<p style="text-align: left">He is the only Family member that is not behind the dj-booth during the events
-                    but his passion for music has no boundaries and is always reflected in the Klang Heimlich lineup.
-                    Phil has been in the Swiss nightlife scene for more than 15 years with very successful events in
-                    different cities. His experience is a very valuable asset for each single event that we create and has
-                    enabled us to create new worlds from scratch. Phil has THE eye for unique locations and takes the
-                    lead to transform them in successful events.
-                    <p>(Link: <a href="https://www.facebook.com/loco.phil1" target="_blank"><b> Phil Lutz</b> </a>)</p>
-                <hr/>
-                <h2 style="text-align: left">Tom Hängs</h2>
-                <p style="text-align: left">one of the three founding fathers of the Klang Heimlich crew. He enriches the
-                    Family with skills in graphics, logistics and technics. He enjoys redefining the musical boundaries of
-                    Klang Heimlich events with “out of the box” bookings. His wide range of musical taste is reflected in
-                    his sets, the longer the better: from melodic electronica, Tom glides effortlessly into the deeper shades
-                    of house and organic layers of techno all the while adding a twist of dub but never losing grip of a
-                    solid groove. Always good for a surprise, his playful persona endears the crowds minds, bodies and souls
-                    <p>(Link: <a href="https://www.facebook.com/tomhaengsZH/" target="_blank"><b> Tom Hängs</b> </a>) </p>
+
+              <article id="first" class="container box style1 right party-element">
+                <a href="#" class="image fit"><img src="../../assets/images/owners/daniposada.jpg" alt="" /></a>
+                <div class="inner">
+                  <header>
+                    <h2>Dani Posada</h2>
+                  </header>
+                  <p> As one of the founders of Klang Heimlich, Dani Posada is taking care of the bookings,
+                       logistics, decoration and artwork. Moreover, he is one of the three residents at Klang Heimlich and co-founder
+                        of other labels in Switzerland. Despite his young DJ career, Dani has already achieved to play in
+                        different cities around the world and is a well-known DJ to the Zurich nightlife scene. His sets
+                        as well as current productions are defined by groovy sounds that can go from downtempo over
+                        deep- and tech-house to techno, telling a story that is slowly building up and gaining in
+                        intensity until it reaches the climax.
+                        <br/>(Link: <a href="https://www.facebook.com/DaniPosadaMusic/" target="_blank"> <b> Dani Posada</b> </a>)
+                </p>
+                </div>
+              </article>
+
+                <article class="container box style1 left party-element">
+                    <a href="#" class="image fit"><img src="../../assets/images/owners/marcbach.jpg" alt="" /></a>
+                    <div class="inner">
+                      <header>
+                        <h2>Marc Bach</h2>
+                      </header>
+                      <p>a.k.a. Papa Bach began his DJ career back in 1994. Since then he became an institution
+                          in the Swiss nightlife, not only as a DJ and promoter of different labels, but also as producer and owner of
+                          two different clubs in Zurich, Pfingstweide and Cafe Gold. His background as well as his close friendship to
+                           the three founders of Klang Heimlich led him to join the Family in 2017. Since then, Marc is in charge of
+                           finance, staff management and logistics. He is also one of the Klang Heimlich residents, playing together
+                           with his partner Patrick Juen, under the name Juen & Bach. This duo is well known within and beyond
+                           the Swiss borders for their great music.
+                          <br/>(Link: <a href="https://www.facebook.com/JuenBach/" target="_blank"><b> Marc Bach</b> </a>)</p>
+                    </div>
+                </article>
+
+
+                <article id="first" class="container box style1 right party-element">
+                  <a href="#" class="image fit"><img src="../../assets/images/owners/phil.jpg" alt="" /></a>
+                  <div class="inner">
+                    <header>
+                      <h2>Phil Lutz</h2>
+                    </header>
+                    <p>He is the only Family member that is not behind the dj-booth during the events
+                        but his passion for music has no boundaries and is always reflected in the Klang Heimlich lineup.
+                        Phil has been in the Swiss nightlife scene for more than 15 years with very successful events in
+                        different cities. His experience is a very valuable asset for each single event that we create and has
+                        enabled us to create new worlds from scratch. Phil has THE eye for unique locations and takes the
+                        lead to transform them in successful events.
+                        <br />(Link: <a href="https://www.facebook.com/loco.phil1" target="_blank"><b> Phil Lutz</b> </a>)
+                    </p>
+                  </div>
+                </article>
+
+              <!-- Feature 2 -->
+                <article class="container box style1 left party-element">
+                    <a href="#" class="image fit"><img src="../../assets/images/owners/tom.jpg" alt="" /></a>
+                    <div class="inner">
+                      <header>
+                        <h2>Tom Hängs</h2>
+                      </header>
+                      <p>one of the three founding fathers of the Klang Heimlich crew. He enriches the
+                           Family with skills in graphics, logistics and technics. He enjoys redefining the musical boundaries of
+                           Klang Heimlich events with “out of the box” bookings. His wide range of musical taste is reflected in
+                           his sets, the longer the better: from melodic electronica, Tom glides effortlessly into the deeper shades
+                           of house and organic layers of techno all the while adding a twist of dub but never losing grip of a
+                           solid groove. Always good for a surprise, his playful persona endears the crowds minds, bodies and souls
+                           <br/>(Link: <a href="https://www.facebook.com/tomhaengsZH/" target="_blank"><b> Tom Hängs</b> </a>)
+                       </p>
+                    </div>
+                </article>
+
+
+
 
 		 </section>
 
